[tool.poetry]
name = "ifsimtest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.5.2"
d20 = "^1.1.2"
requests = "^2.26.0"
airtable = "^0.4.8"
notion = "^0.0.28"
rich = "^12.0.1"
pandas = "^1.4.1"
pyairtable = "^1.1.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
